--- a/satra/index.html
+++ b/satra/index.html
@@ -10,8 +10,8 @@
 <title>Электромонтаж САТРА Челябинск</title>
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-<link href="/resrc/css2.css" rel="stylesheet" type="text/css" />
-<link href="/resrc/css1.css" rel="stylesheet" type="text/css" />
+<link href="resrc/css2.css" rel="stylesheet" type="text/css" />
+<link href="resrc/css1.css" rel="stylesheet" type="text/css" />
 
 
 <script type="text/javascript" >
@@ -217,6 +217,7 @@ function sndSwap(newaudio, audiout) {
 
 
 <div class="footer blue5">
+
 <audio id="audio01" title="Laputa Castle in the sky waltz" preload="auto" loop >
   <source src="media/howls-moving-castle1.mp3" type="audio/mp3">
 </audio>
@@ -226,24 +227,38 @@ function sndSwap(newaudio, audiout) {
 <audio id="audio03" title="Позвони мне, позвони" preload="auto" loop >
   <source src="media/callme.mp3" type="audio/mp3">
 </audio>
+
 <div class="footer1">
-<div class="contact2">
 	<div class="embl" id="RF">Россия</div>
 	<div class="embl" id="Chel">Челябинск</div>
 </div>
-<div class="contact2">
+
+<div class="footer1">
 	<div class="embl" id="myPhone">8-952-523-95-48<br>8-904-303-78-94</div>
 	<div class="embl" id="myEmail"><a href="mailto:gred@live.ru">Наш e-mail</a></div>
 	<div class="embl" id="myVK"><a href="https://vk.com/club118537084">Мы в контакте</a></div>
 </div>
-</div>
-<nav class="footer2">
+
+<div class="footer1"><br>
 <a href="#header2">Наверх</a>
 <a href="#order1">Оставить заявку</a>
 <a href="#activity">Наша деятельность</a>
 <a href="#client">Информация для клиентов</a>
-</nav>
 </div>
+
+<table class="counter1" border="1">
+<caption>Счетчик посещений</caption>
+<tbody>
+<tr><th>Сегодня</th><td>5</td></tr>
+<tr><th>Вчера</th><td>18</td></tr>
+<tr><th>За неделю</th><td>124</td></tr>
+<tr><th>За месяц</th><td>1831</td></tr>
+<tr><th>За год</th><td>6725</td></tr>
+</tbody>
+</table>
+
+</div>
+
 
 
 </body>
