--- a/satra/index.html
+++ b/satra/index.html
@@ -214,10 +214,7 @@ function sndSwap(newaudio, audiout) {
 </table>
 </div>
 
-
-
 <div class="footer blue5">
-
 <audio id="audio01" title="Laputa Castle in the sky waltz" preload="auto" loop >
   <source src="media/howls-moving-castle1.mp3" type="audio/mp3">
 </audio>
@@ -246,7 +243,7 @@ function sndSwap(newaudio, audiout) {
 <a href="#client">Информация для клиентов</a>
 </div>
 
-<table class="counter1" border="1">
+<table class="counter1">
 <caption>Счетчик посещений</caption>
 <tbody>
 <tr><th>Сегодня</th><td>5</td></tr>
@@ -256,10 +253,7 @@ function sndSwap(newaudio, audiout) {
 <tr><th>За год</th><td>6725</td></tr>
 </tbody>
 </table>
-
 </div>
-
-
 
 </body>
 </html>
