--- a/satra/index.html
+++ b/satra/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
-<html>
-<head lang="ru">
+<html><head lang="ru">
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Электромонтаж САТРА Челябинск. Квалифицированные профессионалы выполнят любые работы по электричеству!">
 <meta name="keywords" content="Электромонтаж Электричество Электрик Освещение Электропроводка Электрогенераторы Насосы Видеонаблюдение Видеодомофон Челябинск">
 <meta name="author" content="Электромонтаж САТРА">
@@ -10,11 +9,11 @@
 <title>Электромонтаж САТРА Челябинск</title>
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-<link href="resrc/css2.css" rel="stylesheet" type="text/css" />
+<link href="resrc/normalize.css" rel="stylesheet" type="text/css" />
 <link href="resrc/css1.css" rel="stylesheet" type="text/css" />
 
-
 <script type="text/javascript" >
+
 function sndSwap(newaudio, audiout) {
 	var varnewaudio = "audio" + newaudio;
 	document.getElementById(varnewaudio).muted = audiout;
@@ -29,14 +28,29 @@ function sndSwap(newaudio, audiout) {
 <div id="header2"></div><div id="logo"></div>
 </div>
 
-<h1 class="name1 blue1 back-img1">Электромонтаж</h1>
+<h1 class="name1 blue1">Электромонтаж</h1>
 
 <div class="center">
 <ul class="ul1">
-	<li>Квалифицированные профессионалы выполнят любые работы по электричеству!</li> 
-	<li>Цены зависят от сложности объекта и объема работ</li>
-	<li>Точную стоимость электромонтажных работ узнавайте по телефону или оставте заявку</li>
+	<li><p class="icon cog spin blue4"></p>Квалифицированные профессионалы выполнят любые работы по электричеству!</li> 
+	<li><p class="icon rub spin blue4"></p>Цены зависят от сложности объекта и объема работ</li>
+	<li><p class="icon question-o spin blue4"></p>Точную стоимость электромонтажных работ узнавайте по телефону или оставте заявку</li>
 </ul>
+</div>
+<div class="side">
+<div class="contact blue2" onMouseOver="sndSwap('03', false)" onMouseOut="sndSwap('03', true)">
+	<div class="embl RF">Россия</div>
+	<div class="embl Chel">Челябинск</div>
+</div>
+<div class="contact blue2" onMouseOver="sndSwap('03', false)" onMouseOut="sndSwap('03', true)">
+	<div class="embl2"><span class="icon mobile blue4"></span>8-952-523-95-48</div>
+	<div class="embl2"><span class="icon mail blue4"></span><a href="mailto:gred@live.ru">Наш e-mail</a></div>
+	<div class="embl2"><span class="icon mobile blue4"></span>8-904-303-78-94</div>
+	<div class="embl2"><span class="icon vk blue4"></span><a href="https://vk.com/club118537084">Мы в контакте</a></div>
+</div>
+</div>
+
+<div class="center">
 <div class="board"><h2 class="name2 blue5 back-img2">Электрощиты</h2>
    	<img src="imgs/phgal/elboard/1.png" alt=""/>
     <img src="imgs/phgal/elboard/2.png" alt=""/>
@@ -78,27 +92,20 @@ function sndSwap(newaudio, audiout) {
 </div>
 </div>
 
-<div class="contact blue2" onMouseOver="sndSwap('03', false)" onMouseOut="sndSwap('03', true)">
-	<div class="embl" id="RF">Россия</div>
-	<div class="embl" id="Chel">Челябинск</div>
-	<div class="embl" id="myPhone">8-952-523-95-48<br>8-904-303-78-94</div>
-	<div class="embl" id="myEmail"><a href="mailto:gred@live.ru">Наш e-mail</a></div>
-	<div class="embl" id="myVK"><a href="https://vk.com/club118537084">Мы в контакте</a></div>
-</div>
-
+<div class="side">
 <div id="order1">
 <img class="order3" src="imgs/order3.png" alt=""/>
 <img class="order4" src="imgs/order4.png" alt=""/>
 
 <form id="order2" method="post">
-<input id="name" name="name" type="text" placeholder="Ваше имя" value="">
-<input id="email" name="email" type="email" placeholder="Ваш e-mail" value="">
-<input id="phone" name="phone" type="tel" placeholder="Ваш телефон" value="">
-<textarea id="msg" name="msg" placeholder="Ваша заявка" value=""></textarea>
-<input id="send" name="send" type="submit" value="Отправить заявку">
+<label for="name" class="icon user"></label><input id="name" name="name" type="text" placeholder="Ваше имя" value="">
+<label for="email" class="icon mail"></label><input id="email" name="email" type="email" placeholder="Ваш e-mail" value="">
+<label for="phone" class="icon mobile"></label><input id="phone" name="phone" type="tel" placeholder="Ваш телефон" value="">
+<label for="msg" class="icon text"></label><textarea id="msg" name="msg" placeholder="Ваша заявка"></textarea>
+<label for="send" class="icon plane"></label><input id="send" name="send" type="submit" value="Отправить заявку">
 </form>
 </div>
-
+</div>
 
 
 <div class="center2" onMouseOver="sndSwap('01', false)" onMouseOut="sndSwap('01', true)">
@@ -134,15 +141,16 @@ function sndSwap(newaudio, audiout) {
 <div class="center2">
 <table id="client" class="side1 blue5">
 <caption class="red1">Проблемы, с которыми сталкиваются 95% клиентов</caption>
-<tr><th rowspan="3">Завышенные цены</th></tr>
-<tr><td>80% предложений на рынке электромонтажных работ в Челябинске - посредники</td></tr>
-<tr><td>Делают наценку на услуги 200-300%</td></tr>
+<tr>
+<th rowspan="2">Завышенные цены</th>
+<td>80% предложений на рынке электромонтажных работ в Челябинске - посредники</td>
+<td>Делают наценку на услуги 200-300%</td>
+</tr>
+
 <tr><th colspan="2">В итоге, вы переплачиваете во много раз</th></tr>
-
-<tr><th rowspan="3">Некачественный монтаж и материалы</th></tr>
-<tr><td>Стараясь сэкономить, и получить наибольшую выгоду, посредники закупают дешевые материалы и нанимают неграмотных специалистов</td></tr>
-<tr><td>Монтаж электропроводки посредники выполняют абы-как</td></tr>
-
+<tr><th rowspan="2">Некачественный монтаж и материалы</th>
+<td>Стараясь сэкономить, и получить наибольшую выгоду, посредники закупают дешевые материалы и нанимают неграмотных специалистов</td>
+<td>Монтаж электропроводки посредники выполняют абы-как</td></tr>
 <tr><th colspan="2">Результат таких работ очевиден</th></tr>
 </table>
 
@@ -215,6 +223,7 @@ function sndSwap(newaudio, audiout) {
 </div>
 
 <div class="footer blue5">
+
 <audio id="audio01" title="Laputa Castle in the sky waltz" preload="auto" loop >
   <source src="media/howls-moving-castle1.mp3" type="audio/mp3">
 </audio>
@@ -225,18 +234,20 @@ function sndSwap(newaudio, audiout) {
   <source src="media/callme.mp3" type="audio/mp3">
 </audio>
 
-<div class="footer1">
-	<div class="embl" id="RF">Россия</div>
-	<div class="embl" id="Chel">Челябинск</div>
+<div class="side">
+<div class="contact">
+	<div class="embl RF">Россия</div>
+	<div class="embl Chel">Челябинск</div>
+</div><br><br>
+<div class="contact">
+	<div class="embl2"><span class="icon mobile blue5"></span>8-952-523-95-48</div>
+	<div class="embl2"><span class="icon mail blue5"></span><a href="mailto:gred@live.ru">Наш e-mail</a></div>
+	<div class="embl2"><span class="icon mobile blue5"></span>8-904-303-78-94</div>
+	<div class="embl2"><span class="icon vk blue5"></span><a href="https://vk.com/club118537084">Мы в контакте</a></div>
+</div>
 </div>
 
-<div class="footer1">
-	<div class="embl" id="myPhone">8-952-523-95-48<br>8-904-303-78-94</div>
-	<div class="embl" id="myEmail"><a href="mailto:gred@live.ru">Наш e-mail</a></div>
-	<div class="embl" id="myVK"><a href="https://vk.com/club118537084">Мы в контакте</a></div>
-</div>
-
-<div class="footer1"><br>
+<div class="side">
 <a href="#header2">Наверх</a>
 <a href="#order1">Оставить заявку</a>
 <a href="#activity">Наша деятельность</a>
