--- a/satra/index.html
+++ b/satra/index.html
@@ -21,36 +21,37 @@
 
 <div class="divflex1">
 	<div id="logo1" >
-        <div id="gemini" class="yellow1 spinY"> &#9802; </div>
+        <div id="gemini" class="icon gemini yellow1 spinY"></div>
         <span class="yellow1">БЛИЗНЕЦЫ</span>
 	</div>
 </div>
 <div class="divflex2">
 	<div id="logo2" >
-        <span class="orange4">Санкт</span>
-        <span class="orange4">Петербург</span>
+        <span class="orange1">Санкт</span>
+        <span class="orange1">Петербург</span>
 	</div>
 </div>
 <div class="divflex2">
 	<div id="logo3" >
-		<span class="">22 мая</span>
+		<p class="red1">22 мая</p>
 	</div>
 </div>
 
 <div class="div3d">
-	<div class="spec spec1">С Днем рождения, Наташа!</div>
+	<div class="spec spec1">С Днем рождение, Наташа!</div>
 	<div class="spec spec2">Happy birthday, Natasha!</div>
 </div>
 
 <ul id="ul-congr" class="red1">
-	<li id="congr1">Счастья, здоровья!</li>
-	<li id="congr2">Любви!</li>
+	<li id="congr1">Счастья!</li>
+	<li id="congr2">Здоровья!</li>
 	<li id="congr3">Оптимизма!</li>
 	<li id="congr4">Удачи!</li>
 	<li id="congr5">Успехов в астрологии!</li>
 </ul>
+
 <div class="divflex4">
-<img src="imgs/SP1.png" alt=""/>
+	<img src="imgs/SP1.png" alt=""/>
 </div>
 
 <ul class="ul2 color1">
@@ -74,6 +75,8 @@
 
 
 
+<div id="footer">
+</div>
 
 </body>
 </html>
