--- a/satra/index.html
+++ b/satra/index.html
@@ -33,7 +33,7 @@
 </div>
 <div class="divflex2">
 	<div id="logo3" >
-		<p class="red1">22 мая</p>
+		<span class="red1">22 мая 2018</span>
 	</div>
 </div>
 
@@ -49,6 +49,17 @@
 	<li id="congr4">Удачи!</li>
 	<li id="congr5">Успехов в астрологии!</li>
 </ul>
+
+<div id="cube">
+	<div id="cube3d">
+    	<div class="side" id="side1"></div>
+    	<div class="side" id="side2"></div>
+    	<div class="side" id="side3"></div>
+    	<div class="side" id="side4"></div>
+    	<div class="side" id="side5"></div>
+    	<div class="side" id="side6"></div>
+    </div>
+</div>
 
 <div class="divflex4">
 	<img src="imgs/SP1.png" alt=""/>
