--- a/satra/index.html
+++ b/satra/index.html
@@ -2,9 +2,12 @@
 <html><head lang="ru">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<meta name="description" content="Поздравительный сайт-открытка">
+<meta name="keywords" content="Поздравительный сайт-открытка">
+<meta name="author" content="Григорьев Евгений">
 
 <title>Поздравительный сайт-открытка</title>
+
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link href="resrc/css1.css" rel="stylesheet" type="text/css" />
@@ -38,7 +41,7 @@
 </div>
 
 <div class="div3d">
-	<div class="spec spec1">С Днем рождение, Наташа!</div>
+	<div class="spec spec1">С Днем рождения, Наташа!</div>
 	<div class="spec spec2">Happy birthday, Natasha!</div>
 </div>
 
@@ -52,17 +55,17 @@
 
 <div id="cube">
 	<div id="cube3d">
-    	<div class="side" id="side1"></div>
+    	<div class="side" id="side1">С Днем рождения, Наташа!</div>
     	<div class="side" id="side2"></div>
     	<div class="side" id="side3"></div>
     	<div class="side" id="side4"></div>
     	<div class="side" id="side5"></div>
-    	<div class="side" id="side6"></div>
+    	<div class="side" id="side6">С Днем рождения, Наташа!</div>
     </div>
 </div>
 
 <div class="divflex4">
-	<img src="imgs/SP1.png" alt=""/>
+	<img src="imgs/SP1.png" alt="Мост Санкт-Петербурга"/>
 </div>
 
 <ul class="ul2 color1">
