--- a/satra/index.html
+++ b/satra/index.html
@@ -60,7 +60,7 @@
     	<div class="side" id="side3"></div>
     	<div class="side" id="side4"></div>
     	<div class="side" id="side5"></div>
-    	<div class="side" id="side6">С Днем рождения, Наташа!</div>
+    	<div class="side" id="side6"></div>
     </div>
 </div>
 
